--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        applicationId 'com.github.tvbox.osc.tk'
+        applicationId 'com.github.xlz'
         targetSdkVersion 28
         versionCode 1
         versionName "1.0.".concat(buildTime())
@@ -29,10 +29,7 @@ android {
     }
 
     buildTypes {
-        release {
-            minifyEnabled true
 
-        }
     }
 
     flavorDimensions += ["abi", "brand", "mode"]
